src/objects/OfertaConceptoPagos__c.object
<CustomObject>
    <fields>
        <fullName>Activo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cantidad__c</fullName>
        <label>Cantidad</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ConceptoFijo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fijo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConceptoPago__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Concepto pago</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo__c.TipoCatalogo__c</field>
                <operation>equals</operation>
                <value>Concepto Pagos</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo__c</referenceTo>
        <relationshipLabel>Ofertas Concepto Pagos</relationshipLabel>
        <relationshipName>Ofertas_Concepto_Pagos</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monto__c</fullName>
        <label>Monto</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OfertaEducativa__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Oferta educativa</label>
        <referenceTo>OfertaEducativa__c</referenceTo>
        <relationshipLabel>Ofertas Concepto Pagos</relationshipLabel>
        <relationshipName>OfertasConceptoPagos</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Oferta Concepto Pagos</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OfertaEducativa__c</columns>
        <columns>ConceptoPago__c</columns>
        <columns>Monto__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <listViews>
        <fullName>AllSO</fullName>
        <columns>NAME</columns>
        <columns>OfertaEducativa__c</columns>
        <columns>ConceptoPago__c</columns>
        <columns>Monto__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OfertaEducativa__c</field>
            <operation>equals</operation>
        </filters>
        <label>Todos sin oferta</label>
    </listViews>
    <nameField>
        <displayFormat>OE-CP-{00000}</displayFormat>
        <label>Oferta Concepto Pagos</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ofertas Concepto Pagos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>